@@ -99,11 +99,6 @@ class SimpleQueueTestCase(unittest.TestCase):
             print('\n', '-=' * 30)
             print("Running %s.test02_basicPost32..." % self.__class__.__name__)
 
-        if db.version() < (3, 2, 0):
-            if verbose:
-                print("Test not run, DB not new enough...")
-            return
-
         d = db.DB()
         d.set_re_len(40)  # Queues must be fixed length
         d.open(self.filename, db.DB_QUEUE, db.DB_CREATE)
